# ASPLOS-2025-M5

./: .gitmodules  README.md
hw/: README.md  general.md  program_fpga.sh
hw/m5_rtl/r1bes_mem/: intel_rtile_cxl_top_cxltyp2_ed.ip
kernels/: README.md
kernels/5.19_changes/: migrate.c
kernels/6.11_changes/: paddr.c
kernels/m5_kernel_v6.5/: Makefile  compile.sh
kernels/m5_kernel_v6.5/mm/: memory-tiers.c  memory.c  migrate.c  page_alloc.c
kernels/m5_kernel_v6.5/pgmigrate/: page_migrate.c
setup/: enable_demote.sh  env.sh  setup_m5.sh  turbo-boost.sh
setup/core_pqos/: check_pqos.sh  cpu-offlining.py  cpu-onlining.py  set_1t_llc.sh  set_20t_llc.sh  set_8t_llc.sh  set_mcd_llc.sh
sw/: README.md
sw/cxl-hint-fault-pcm/: pcm.spec
sw/damo/: gen_migpol.py
sw/kmod_pac_ofw_buf/: compile_install.sh  pac_ofw_buf.c
sw/kmod_pgmigrate/: compile_install.sh  migrate.sh  page_migrate.c
sw/m5_lat_opt_uspace/include/: csr.h  (+2 more)
sw/m5_manager_uspace/: README.md
sw/pac_ofw_uspace/: CMakeLists.txt
sw/pac_ofw_uspace/include/: csr.h  pcm-memory-shared.c  util.h  worker.h
sw/pac_ofw_uspace/src/: csr.cpp  main.cpp  pcm-memory.cpp  util.cpp  worker.cpp
testing_scripts/: README.md  fig10_eval_all.sh  fig8_eval_all.sh  fig9_eval_all.sh
testing_scripts/1_thread/: func_redis_ycsb.sh  load_redis.sh  query_redis.sh  run_redis.sh
testing_scripts/20_threads/: run_gapbs_bc.sh  run_gapbs_bfs.sh  run_gapbs_cc.sh  run_gapbs_generic.sh  run_gapbs_pr.sh  run_gapbs_sssp.sh  run_gapbs_tc.sh  run_liblinear.sh
testing_scripts/8_threads/: loop_base_cgrp_copies.sh  run_spec_cgrp.sh
(+122 files in other folders)
